--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,72 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import { Picture } from "astro:assets"
+import HeaderImage from "../images/sta_02.jpg"
+import HeroBanner from "../components/homepage/HeroBanner.astro"
+import Welcome from "../components/Welcome.astro"
+import Layout from "../components/layout/Layout.astro"
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout
+  title="Eternal Concepts by Philip J. Rhea"
+  description="Architecture, Remodeling, Elevation and Renderings by Philip J. Rhea"
+>
+  <HeroBanner />
+  <!-- <div class="w-full aspect-square md:aspect-video lg:max-h-[50vh] relative">
+    <Picture
+      src={HeaderImage}
+      widths={[400, 1000, 1600, 2500]}
+      sizes="100vw"
+      loading="eager"
+      alt="Philip J. Rhea"
+      formats={["avif", "webp"]}
+      class="w-full h-full object-cover"
+    />
+    <div
+      class="lg:absolute inset-0 lg:bg-gradient-to-r from-emerald-700/80 via-50% via-emerald-600/80 to-transparent lg:text-white lg:text-lg lg:w-3/4 flex items-center font-light"
+    >
+      <div class="flex flex-col m-auto lg:w-1/2 lg:-translate-x-1/4 p-4">
+        <h2 class="text-emerald-700 lg:text-white font-serif text-4xl">
+          This is a Header
+        </h2>
+        <p class="lg:text-lg max-w-[600px] leading-loose">
+          This is a paragraph. That has a lot of text. It is really long. You
+          can see it. It is a very long paragraph that goes on and on. It is so
+          long that it might never end. But it will end eventually. And when it
+          does, you will be able to read the rest of the content without any
+          issues. It is important to have long paragraphs sometimes, because it
+          helps to fill the space and make the content look more complete. It
+          also helps to keep the
+        </p>
+      </div>
+    </div>
+  </div> -->
+  <button
+    class="bg-blue-500 text-white p-2 rounded duration-200"
+    data-state="on"
+    onclick="changeState(this)">Click Me</button
+  >
+
+  <button
+    class="bg-blue-500 text-white p-2 rounded duration-200"
+    data-state="on"
+    onclick="changeState(this)">Click Me 2</button
+  >
+
+  <button
+    class="bg-blue-500 text-white p-2 rounded duration-200"
+    data-state="on"
+    onclick="changeState(this)">Click Me 3</button
+  >
+  <script is:inline>
+    function changeState(button) {
+      const state = button.getAttribute("data-state")
+      button.setAttribute("data-state", state === "on" ? "off" : "on")
+      button.innerHTML = state === "on" ? "Turn Off" : "Turn On"
+      button.classList.toggle("bg-blue-500")
+      button.classList.toggle("bg-red-500")
+    }
+  </script>
 </Layout>
