--- a/src/components/layout/Layout.astro
+++ b/src/components/layout/Layout.astro
@@ -31,9 +31,9 @@ const {
 
   <body class="min-h-screen flex flex-col">
     <header
-      class="bg-white/60 backdrop-blur-lg border-b-stone-500 text-stone-600 h-16 fixed top-0 w-full z-50 flex justify-center items-center"
+      class="bg-white/60 backdrop-blur-lg h-16 fixed top-0 w-full z-[10000] flex justify-center items-center"
     >
-      <nav class="container mx-auto flex justify-between items-center">
+      <nav class="w-full flex justify-between items-center p-5">
         <a href="/" class="text-xl font-serif">Eternal Concepts</a>
         <ul class="flex gap-4">
           <li><a href="/contact" class="hover:underline">Profile</a></li>
