corporate to institutional

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,8 +73,10 @@ import Layout from "../components/layout/Layout.astro"
             loading={"lazy"}
             class="w-full h-full object-cover rounded-xl aspect-video lg:aspect-square border border-stone-400"
           />
-          <h3 class="font-serif text-xl lg:text-2xl pt-4">Corporate Designs</h3>
-          <p>description about Corporate architecture (what is it?)</p>
+          <h3 class="font-serif text-xl lg:text-2xl pt-4">
+            Institutional Designs
+          </h3>
+          <p>description about Institutional architecture (what is it?)</p>
         </div>
       </div>
     </div>
