trajan font added to h2 and h3

--- a/src/components/homepage/HeroBanner.astro
+++ b/src/components/homepage/HeroBanner.astro
@@ -62,7 +62,7 @@ const textColors = ["text-green-700", "text-red-800", "text-slate-600"]
     <div class="flex flex-col lg:m-auto lg:w-1/2 lg:-translate-x-1/4">
       <h2
         id="hero-title"
-        class="font-serif text-2xl lg:text-4xl lg:text-white transition-colors duration-1000 ease-in-out text-emerald-700"
+        class="font-trajan text-2xl lg:text-4xl lg:text-white transition-colors duration-1000 ease-in-out text-emerald-700"
       >
         Architectural Mastery
       </h2>
