--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Layout from "../components/layout/Layout.astro"
     class="bg-stone-100 text-stone-700 min-h-screen flex justify-center items-center"
   >
     <div class="w-11/12 m-auto max-w-[1366px] flex flex-col py-20">
-      <h2 class="font-serif text-2xl lg:text-4xl">Past Projects</h2>
+      <h2 class="text-2xl lg:text-4xl">Past Projects</h2>
       <p>description about past projects</p>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 mt-10 gap-10">
         <div class="flex flex-col">
@@ -32,7 +32,7 @@ import Layout from "../components/layout/Layout.astro"
             loading={"lazy"}
             class="w-full h-full object-cover rounded-xl aspect-video lg:aspect-square border border-stone-400"
           />
-          <h3 class="font-serif text-xl lg:text-2xl pt-4">Civic Designs</h3>
+          <h3 class="text-xl lg:text-2xl pt-4">Civic Designs</h3>
           <p>description about civic architecture (what is it?)</p>
         </div>
         <div class="flex flex-col">
@@ -43,7 +43,7 @@ import Layout from "../components/layout/Layout.astro"
             loading={"lazy"}
             class="w-full h-full object-cover rounded-xl aspect-video lg:aspect-square border border-stone-400"
           />
-          <h3 class="font-serif text-xl lg:text-2xl pt-4">Religious Designs</h3>
+          <h3 class="text-xl lg:text-2xl pt-4">Religious Designs</h3>
           <p>description about religious architecture (what is it?)</p>
         </div>
         <div class="flex flex-col">
@@ -54,9 +54,7 @@ import Layout from "../components/layout/Layout.astro"
             loading={"lazy"}
             class="w-full h-full object-cover rounded-xl aspect-video lg:aspect-square border border-stone-400"
           />
-          <h3 class="font-serif text-xl lg:text-2xl pt-4">
-            Residential Designs
-          </h3>
+          <h3 class="text-xl lg:text-2xl pt-4">Residential Designs</h3>
           <p>
             description about residential architecture (what is it?)
             <br />
@@ -73,9 +71,7 @@ import Layout from "../components/layout/Layout.astro"
             loading={"lazy"}
             class="w-full h-full object-cover rounded-xl aspect-video lg:aspect-square border border-stone-400"
           />
-          <h3 class="font-serif text-xl lg:text-2xl pt-4">
-            Institutional Designs
-          </h3>
+          <h3 class="text-xl lg:text-2xl pt-4">Institutional Designs</h3>
           <p>description about Institutional architecture (what is it?)</p>
         </div>
       </div>
