added pacioli font

--- a/src/components/layout/Layout.astro
+++ b/src/components/layout/Layout.astro
@@ -34,7 +34,10 @@ const {
       class="bg-white/60 backdrop-blur-lg h-16 fixed top-0 w-full z-[10000] flex justify-center items-center"
     >
       <nav class="w-full flex justify-between items-center p-5">
-        <a href="/" class="text-xl font-serif">Eternal Concepts</a>
+        <a href="/" class="text-xl font-serif text-gray-600">
+          <span class="font-pacioli text-2xl text-yellow-600">e</span>Eternal
+          Concepts</a
+        >
         <ul class="flex gap-4">
           <li><a href="/contact" class="hover:underline">Profile</a></li>
           <li><a href="/about" class="hover:underline">Philosophy</a></li>
