--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,14 +5,32 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Pacioli";
+  src: url("../fonts/LucaPacioliCaps.woff2") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 @import "tailwindcss";
 
 @layer base {
-  h2,
-  h3 {
+  .font-trajan {
     font-family: "TrajanFont", sans-serif;
   }
+  .font-pacioli {
+    font-family: "Pacioli", sans-serif;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-trajan;
 }
 
 /* global.css */
