--- a/src/components/homepage/HeroBanner.astro
+++ b/src/components/homepage/HeroBanner.astro
@@ -21,10 +21,10 @@ const textColors = ["text-green-700", "text-red-800", "text-slate-600"]
 </div>
 
 <div
-  class="w-full lg:max-h-[50vh] lg:min-h-[25rem] relative overflow-hidden flex flex-col p-5"
+  class="w-full lg:max-h-[50vh] lg:min-h-[25rem] relative overflow-hidden flex flex-col"
 >
   <div
-    class="relative aspect-square sm:aspect-video w-full h-full object-cover rounded-2xl overflow-hidden"
+    class="relative aspect-square sm:aspect-video w-full h-full object-cover overflow-hidden"
   >
     {
       images.map((image, i) => (
@@ -67,7 +67,8 @@ const textColors = ["text-green-700", "text-red-800", "text-slate-600"]
         Architectural Mastery
       </h2>
       <p class="lg:text-lg max-w-[600px] leading-loose">
-        This is a paragraph. That has a lot of text...
+        <span class="font-pacioli text-4xl">t</span>his is a paragraph. That has
+        a lot of text...
       </p>
     </div>
   </div>
