--- a/src/components/layout/Layout.astro
+++ b/src/components/layout/Layout.astro
@@ -29,16 +29,20 @@ const {
     />
   </head>
 
-  <body class="min-h-screen flex flex-col">
+  <body class="min-h-screen flex flex-col overflow-hidden">
     <header
       class="bg-white/60 backdrop-blur-lg h-16 fixed top-0 w-full z-[10000] flex justify-center items-center"
     >
       <nav class="w-full flex justify-between items-center p-5">
-        <a href="/" class="text-xl font-serif text-gray-600">
-          <span class="font-pacioli text-2xl text-yellow-600">e</span>Eternal
-          Concepts</a
+        <a href="/" class="text-xl font-serif text-gray-600"
+          ><h1 class="leading-5">
+            eternal concepts<br />
+            <span class="font-serif font-light italic text-stone-400 text-sm"
+              >by Philip J. Rhea</span
+            >
+          </h1></a
         >
-        <ul class="flex gap-4">
+        <ul id="menuLinks" class="hidden lg:flex gap-4">
           <li><a href="/contact" class="hover:underline">Profile</a></li>
           <li><a href="/about" class="hover:underline">Philosophy</a></li>
           <li><a href="/contact" class="hover:underline">Portfolio</a></li>
@@ -46,50 +50,107 @@ const {
           <li><a href="/contact" class="hover:underline">Proposal</a></li>
           <li><a href="/contact" class="hover:underline">Portal</a></li>
         </ul>
+        <button
+          class="bg-blue-500 text-white p-2 rounded duration-200 lg:hidden"
+          data-state="on"
+          onclick="burgerMenu(this)">Click Me 3</button
+        >
       </nav>
     </header>
 
-    <main class="w-full h-full min-h-[calc(100vh-8rem)] mt-16">
-      <slot />
+    <main class={"w-screen overflow-hidden h-full min-h-[calc(100vh-8rem)] "}>
+      <div
+        id="pageContent"
+        class="duration-500 ease-[cubic-bezier(1,-0.13,.17,1.18)] h-screen overflow-auto relative origin-top-right pt-16"
+      >
+        <slot />
+        <footer class="bg-gray-800 text-white text-center p-4 w-full h-16">
+          <div class="flex flex-row items-center justify-center">
+            <div class="size-8 border-2 border-white p-2 rounded-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 320 512"
+              >
+                <path
+                  d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"
+                ></path>
+              </svg>
+            </div>
+            <div class="size-8 border-2 border-white p-1 rounded-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 576 512"
+              >
+                <path
+                  d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"
+                ></path>
+              </svg>
+            </div>
+            <div class="size-8 border-2 border-white p-1 rounded-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 448 512"
+              >
+                <path
+                  d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"
+                ></path>
+              </svg>
+            </div>
+          </div>
+          &copy; {new Date().getFullYear()} My Site. All rights reserved.
+        </footer>
+      </div>
     </main>
 
-    <footer class="bg-gray-800 text-white text-center p-4 w-full h-16">
-      <div class="flex flex-row items-center justify-center">
-        <div class="size-8 border-2 border-white p-2 rounded-lg">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 320 512"
-          >
-            <path
-              d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"
-            ></path>
-          </svg>
-        </div>
-        <div class="size-8 border-2 border-white p-1 rounded-lg">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 576 512"
-          >
-            <path
-              d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"
-            ></path>
-          </svg>
-        </div>
-        <div class="size-8 border-2 border-white p-1 rounded-lg">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 448 512"
-          >
-            <path
-              d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"
-            ></path>
-          </svg>
-        </div>
-      </div>
-      &copy; {new Date().getFullYear()} My Site. All rights reserved.
-    </footer>
+    <script is:inline>
+      function burgerMenu(button) {
+        // flip the button’s data-state
+        const prev = button.getAttribute("data-state")
+        const next = prev === "on" ? "off" : "on"
+        button.setAttribute("data-state", next)
+        button.textContent = next === "on" ? "Turn Off" : "Turn On"
+
+        // swap button colors
+        button.classList.toggle("bg-blue-500")
+        button.classList.toggle("bg-red-500")
+
+        // grab your main
+        const main = document.getElementById("pageContent")
+
+        // Arrays of classes to remove vs. add:
+        const closedMenu = [
+          "scale-[100%]",
+          "translate-x-[0%]",
+          "translate-y-[0%]",
+          "w-screen",
+          "overflow-auto",
+        ]
+        const openMenu = [
+          "scale-[50%]",
+          "overflow-hidden",
+          "w-screen",
+          "border",
+          "border-stone-300",
+          "shadow-xl",
+          "rounded-2xl",
+          "overflow-hidden",
+          "translate-x-[20%]",
+          "translate-y-[25%]",
+        ]
+        if (next === "on") {
+          main.classList.remove(...closedMenu)
+          main.classList.add(...openMenu)
+        } else {
+          main.classList.remove(...openMenu)
+          main.classList.add(...closedMenu)
+          setTimeout(() => {
+            main.classList.remove("w-screen")
+          }, 300)
+        }
+      }
+    </script>
   </body>
 </html>
